This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: [2.7] Possible crashes due to incorrect error handling in pyexpat.c
Type: crash Stage: resolved
Components: Extension Modules Versions: Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ZackerySpytz, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2018-10-25 16:58 by ZackerySpytz, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 10099 merged ZackerySpytz, 2018-10-25 17:00
Messages (2)
msg328455 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2018-10-25 17:00
The attached PR fixes several error handling bugs in pyexpat.c.
msg328793 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-10-29 07:24
New changeset d61f586df79a754776f448e5b23015abb71f4fd1 by Serhiy Storchaka (Zackery Spytz) in branch '2.7':
[2.7] bpo-35068: Fix possible crashes in pyexpat.c. (GH-10099)
https://github.com/python/cpython/commit/d61f586df79a754776f448e5b23015abb71f4fd1
History
Date User Action Args
2022-04-11 14:59:07adminsetgithub: 79249
2018-10-29 07:24:16serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2018-10-29 07:24:03serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg328793
2018-10-25 17:00:51ZackerySpytzsetmessages: + msg328455
2018-10-25 17:00:26ZackerySpytzsetkeywords: + patch
stage: patch review
pull_requests: + pull_request9432
2018-10-25 16:58:45ZackerySpytzcreate