[2.7] bpo-35068: Fix possible crashes in pyexpat.c. (GH-10099)